src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Plaques</fullName>
                </value>
                <value>
                    <fullName>Reports-Unpublished</fullName>
                </value>
                <value>
                    <fullName>Reports-Published</fullName>
                </value>
                <value>
                    <fullName>Profiles-Individual</fullName>
                </value>
                <value>
                    <fullName>Profiles-Firm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC4SF__MC_Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Subscriber</label>
        <referenceTo>MC4SF__MC_Subscriber__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes_RE__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Ranking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Originating Ranking</label>
        <referenceTo>Rankings__c</referenceTo>
        <relationshipLabel>Leads from Ranking</relationshipLabel>
        <relationshipName>Leads_from_Ranking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Originating_Submission_RE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Originating Submission</label>
        <referenceTo>Submissions__c</referenceTo>
        <relationshipLabel>Leads from Submission</relationshipLabel>
        <relationshipName>Leads_from_Submission</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Publication related to this Lead</description>
        <inlineHelpText>Publication related to this Lead</inlineHelpText>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Leads from Publication</relationshipLabel>
        <relationshipName>Leads_from_Publication</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Leads</relationshipLabel>
        <relationshipName>Related_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Leads</relationshipLabel>
        <relationshipName>Related_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>Lead_Type__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Notes_RE__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>